2010-08-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp: Remove event handler hooks as they're not
	needed anymore (To replace them: use closure and define-handler).

	* src/xlib-util.lisp (move-window, resize-window)
	(wait-mouse-button-release): Use a generic mode.

	* src/*.lisp: Replace the case to handle event with a more (tricky)
	lispy  method which bind a function to each keywords associated
	to graphics events.

2010-07-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-current-child): Invert bindings and
	menu entry between delete-current-child and remove-current-child.
	ie: Delete a child and its children in all frames by default.

2010-07-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp: Add a placement configuration group.

	* src/binding*.lisp: Bind control+g to escape the current action
	like emacs.

	* src/clfswm-internal.lisp
	(delete-child-and-children-in-all-frames): New function and
	binding: Second mode - Control+Delete delete the current child and
	its children in all frames (ie: close the current child and its
	children).

2010-07-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (remove-child-in-frame): Do not destroy
	the frame window and the frame gc. Close a very annoying bug when
	cuting/pasting a frame or moving a child over frames with the
	mouse.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Redisplay
	all children in *current-root* after moving/resizing a frame.

2010-07-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-focus-window)
	(destroy-focus-window): Remove child in parent frame before
	stopping it.

2010-07-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (identify-key): Add a timeout in
	xlib:process-event.
	(mouse-click-to-focus-generic): Use find-child-under-mouse instead
	of the window passed by xlib:process-event.
