@@ -7,7 +7,10 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-Nothing here :)
+BUGS: - Unwanted flickering with unmanaged windows.
+      - Focus with multiple copy of the same window fall in the wrong frame.
+
+######Nothing here :)
 
 MAYBE
 =====
