@@ -569,13 +569,11 @@ mouse-fun is #'move-frame or #'resize-frame"
 		(unless (equal (type-of child) 'frame)
 		  (setf child (find-frame-window child *current-root*)))
 		(setf parent (find-parent-frame child)))))
-	(when (and child parent)
-	  (focus-all-children child parent)
-	  (show-all-children))
 	(when (equal (type-of child) 'frame)
 	  (funcall mouse-fn child parent root-x root-y))
-  	(when (show-all-children *current-root*)
-	  (setf to-replay nil)))
+	(when (and child parent (focus-all-children child parent))
+	  (when (show-all-children *current-root*)
+	    (setf to-replay nil))))
       (if to-replay
 	  (replay-button-event)
 	  (stop-button-event)))))
