@@ -1,3 +1,8 @@
+2010-08-17  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Fix an
+	unwanted flickering with unmanaged windows.
+
 2010-08-16  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/package.lisp: Remove event handler hooks as they're not
